--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/checkout@v3
       with:
-        repository: https://github.com/iAnyKey/gvsbuild
+        repository: iAnyKey/gvsbuild
         ref: fix_vs2022build_lz4
     
     - name: Dependencies - Pkg-Config
