--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,10 +20,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        path: flann
     - uses: actions/checkout@v3
       with:
         repository: iAnyKey/gvsbuild
         ref: fix_vs2022build_lz4
+        path: flann/build/gvsbuild
     
     - name: Dependencies - Pkg-Config
       # builds GTK, which contains required dependencies pkg-config and lz4
