--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,8 +20,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      with:
-        path: flann
+    - run: ls
     #- uses: actions/checkout@v3
     #  with:
     #    repository: iAnyKey/gvsbuild
