--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,14 +34,16 @@ jobs:
         cd ./gvsbuild
         python ./build.py build --build-dir=$pwd\\..\\gtk -p=x64 --vs-ver=17 pkg-config lz4
 
-    #- name: Configure CMake
+    - name: Configure CMake for building FLANN
+      working-directory: ${{github.workspace}}/build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-    #  run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DPKG_CONFIG_EXECUTABLE="$pwd/gtk/gtk/x64/release/bin/pkg-config.exe" -DPKG_CONFIG_ROOT="$pwd/gtk/gtk/x64/release/bin"
 
-    #- name: Build
+    - name: Build
+      working-directory: ${{github.workspace}}/build
       # Build your program with the given configuration
-   #   run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build . --config ${{env.BUILD_TYPE}}
 
    # - name: Test
   #    working-directory: ${{github.workspace}}/build
