--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,11 +43,14 @@ jobs:
     - name: Build
       working-directory: ${{github.workspace}}/build
       # Build your program with the given configuration
-      run: cmake --build . --config ${{env.BUILD_TYPE}}
+      run: cmake --build . --config ${{env.BUILD_TYPE}} 
+      
+    - name: check
+      run:  ls
 
-   # - name: Test
-  #    working-directory: ${{github.workspace}}/build
+    - name: Test
+      working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-   #   run: ctest -C ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}}
       
