--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,19 +38,29 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DPKG_CONFIG_EXECUTABLE="$pwd/gtk/gtk/x64/release/bin/pkg-config.exe" -DPKG_CONFIG_ROOT="$pwd/gtk/gtk/x64/release/bin"
+      run: cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DPKG_CONFIG_EXECUTABLE="$pwd/gtk/gtk/x64/release/bin/pkg-config.exe" -DPKG_CONFIG_ROOT="$pwd/gtk/gtk/x64/release/bin" --install-prefix=$pwd/../out_aftifacts
 
     - name: Build
       working-directory: ${{github.workspace}}/build
       # Build your program with the given configuration
       run: cmake --build . --config ${{env.BUILD_TYPE}} 
-      
-    - name: check
-      run:  ls
 
     - name: Test
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
+      
+    - name: Install & zip artifacts
+      working-directory: ${{github.workspace}}/build
+      run: |
+        cmake --install .
+        cd ../out_aftifacts
+        tar -cvf my_files.tar.gz *       
+      
+    - name: upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: my-artifact
+        path: ${{github.workspace}}/out_aftifacts/my_files.tar.gz
       
