--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -63,12 +63,12 @@ jobs:
       run: |
         cmake --install .
         cd ../out_aftifacts
-        tar -cvf ../flann_x64_${{github.sha::7}}.tar.gz *  
+        tar -cvf ../flann_x64_${{github.sha}}.tar.gz *  
       
     - name: upload-artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: flann_x64_${github.sha::7}
-        path: ${{github.workspace}}/flann_x64_${{github.sha::7}}.tar.gz
+        name: flann_x64_${{github.sha}}
+        path: ${{github.workspace}}/flann_x64_${{github.sha}}.tar.gz
         
       
