--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,8 +2,7 @@ name: CMake
 
 on:
   push:
-    branches: 
-      - "*" #[ master ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
