--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,8 +59,9 @@ jobs:
   # You can convert this to a matrix build if you need cross-platform coverage.
   # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: windows-latest
-    needs: win_dependency-Pkg-Config
-          win_dependency-GTest
+    needs: 
+      - win_dependency-Pkg-Config
+      - win_dependency-GTest
 
     steps:
     - name: checkout
