--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,17 +16,26 @@ jobs:
   win_dependency-Pkg-Config:
     runs-on: windows-latest
     steps:
+    - name: cache gvsbuild
+      id: cache-gvsbuild
+      uses: actions/cache@v3
+      with:
+        path: ${{github.workspace}}/compiled_gvs
+        key: ${{ runner.os }}-gvs
+
     - name: checkout gvsbuild
+      if: steps.cache-gvsbuild.outputs.cache-hit != 'true'
       uses: actions/checkout@v3
       with:
         repository: wingtk/gvsbuild
 
     - name: build gvsbuild
+      if: steps.cache-gvsbuild.outputs.cache-hit != 'true'
       # builds GTK, which contains required dependencies pkg-config and lz4
       working-directory: ${{github.workspace}}/gvsbuild
-      run: |
-        python ./build.py build -p=x64 --vs-ver=17 pkg-config lz4
-        tree ${{github.workspace}}
+      run:
+        python ./build.py build -p=x64 --build-dir="$pwd/../compiled_gvs" pkg-config lz4
+
 #      |
 #        mkdir -F ./build && cd build
 #        git clone https://github.com/wingtk/gvsbuild        
@@ -37,6 +46,13 @@ jobs:
   win_dependency-GTest:
     runs-on: windows-latest
     steps:
+    - name: cache GTest
+      id: cache-gtest
+      uses: actions/cache@v3
+      with:
+        path: ${{github.workspace}}/GTest
+        key: ${{ runner.os }}-gtest
+
     - name: checkout GTest
       uses: actions/checkout@v3
       with:
@@ -45,6 +61,7 @@ jobs:
     - name: build GTest
       # builds and installs the most recent version of the google test
       #        git clone https://github.com/google/googletest.git
+      if: steps.cache-gtest.outputs.cache-hit != 'true'
       working-directory: ${{github.workspace}}/googletest
       run: |
         mkdir -F ./build && cd ./build
@@ -71,7 +88,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DPKG_CONFIG_EXECUTABLE="$pwd/gtk/gtk/x64/release/bin/pkg-config.exe" -DPKG_CONFIG_ROOT="$pwd/gtk/gtk/x64/release/bin" -DGTEST_ROOT="$pwd/GTest" --install-prefix=$pwd/../out_aftifacts
+      run: cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DPKG_CONFIG_EXECUTABLE="${{github.workspace}}/gvsbuild/gtk/x64/release/bin/pkg-config.exe" -DPKG_CONFIG_ROOT="${{github.workspace}}/gvsbuild/gtk/x64/release/bin" -DGTEST_ROOT="${{github.workspace}}/GTest" --install-prefix=$pwd/../out_aftifacts
 
     - name: Build
       working-directory: ${{github.workspace}}/build
