--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,6 +28,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: wingtk/gvsbuild
+        path: gvsbuild
+
 
     - name: build gvsbuild
       if: steps.cache-gvsbuild.outputs.cache-hit != 'true'
