--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -83,6 +83,20 @@ jobs:
     - name: checkout
       uses: actions/checkout@v3
 
+    - name: restore cache gvsbuild #TODO: Version based check
+      id: cache-gvsbuild
+      uses: actions/cache@v3
+      with:
+        path: ${{github.workspace}}/gtk
+        key: ${{ runner.os }}-gvs
+
+    - name: restorecache GTest #TODO: Version based check
+      id: cache-gtest
+      uses: actions/cache@v3
+      with:
+        path: ${{github.workspace}}/GTest
+        key: ${{ runner.os }}-gtest
+
     - name: Configure CMake for building FLANN
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
