--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,8 @@ jobs:
         $GVSBUILD_SHA=& git ls-remote https://github.com/wingtk/gvsbuild HEAD
         $GVSBUILD_SHA=$GVSBUILD_SHA.split()
         $GVSBUILD_SHA_SHORT=$GVSBUILD_SHA[0].Substring(0,6)
-        echo $GVSBUILD_SHA_SHORT >> $GITHUB_ENV
+        echo "GVSBUILD_SHA_SHORT=$GVSBUILD_SHA_SHORT" >> $GITHUB_ENV
+        echo ${{ runner.os }}-gvs-${{ env.GVSBUILD_SHA_SHORT }}
 
     - name: cache gvsbuild #TODO: Version based check
       id: cache-gvsbuild
@@ -44,7 +45,6 @@ jobs:
       working-directory: ${{github.workspace}}/gvsbuild
       run: |
         python ./build.py build --build-dir="${{github.workspace}}\\gtk" -p=x64 pkg-config lz4
-        tree ${{github.workspace}}
 
 
   # --  GTest  --
@@ -108,8 +108,6 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
-        ls .
-        ls ..
         mkdir -F ./build && cd build
         cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DPKG_CONFIG_EXECUTABLE="${{github.workspace}}/gtk/gtk/x64/release/bin/pkg-config.exe" -DPKG_CONFIG_ROOT="${{github.workspace}}/gtk/gtk/x64/release/bin" -DGTEST_ROOT="${{github.workspace}}/GTest" --install-prefix=$pwd/../out_aftifacts
 
