--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,8 +22,8 @@ jobs:
         $GVSBUILD_SHA=& git ls-remote https://github.com/wingtk/gvsbuild HEAD
         $GVSBUILD_SHA=$GVSBUILD_SHA.split()
         $GVSBUILD_SHA_SHORT=$GVSBUILD_SHA[0].Substring(0,6)
-        echo "::set-output name=GVSBUILD_SHA_SHORT::$GVSBUILD_SHA_SHORT"
-        echo "restore key will be"
+        echo '::set-output name=GVSBUILD_SHA_SHORT::$GVSBUILD_SHA_SHORT'
+        echo "restore key will be $GVSBUILD_SHA_SHORT"
         echo ${{ runner.os }}-gvs-${{ steps.gvs_ver.outputs.GVSBUILD_SHA_SHORT }}
 
     - name: cache gvsbuild
