--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,15 +17,17 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: retrieve current commit sha
+      id: gvsbuild-ver
       run: |
         $GVSBUILD_SHA=& git ls-remote https://github.com/wingtk/gvsbuild HEAD
         $GVSBUILD_SHA=$GVSBUILD_SHA.split()
         $GVSBUILD_SHA_SHORT=$GVSBUILD_SHA[0].Substring(0,6)
+        echo "::set-output name=sha_short::$GVSBUILD_SHA_SHORT"
         echo "gvsbuild_sha_short=$GVSBUILD_SHA_SHORT" >> $GITHUB_ENV
         echo "restore key will be $GVSBUILD_SHA_SHORT"
 
     - name: test
-      run: echo ${{ runner.os }}-gvs-${{ env.gvsbuild_sha_short }}
+      run: echo ${{ runner.os }}-gvs-${{ steps.gvsbuild-ver.outputs.sha_short }}
 
 
     - name: cache gvsbuild
@@ -33,7 +35,8 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{github.workspace}}/gtk 
-        key: ${{ runner.os }}-gvs-${{ env.GVSBUILD_SHA_SHORT }}
+        key: ${{ runner.os }}-gvs-${{ steps.gvsbuild-ver.outputs.sha_short }}
+
 
     - name: checkout gvsbuild
       #if: steps.cache-gvsbuild.outputs.cache-hit != 'true'
@@ -99,7 +102,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{github.workspace}}/gtk
-        key: ${{ runner.os }}-gvs-${{ env.GVSBUILD_SHA_SHORT }}
+        key: ${{ runner.os }}-gvs-${{ steps.gvsbuild-ver.outputs.sha_short }}
 
     - name: restore cache GTest #TODO: Version based check
       id: cache-gtest
